--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^19.1.12",
     "@vitejs/plugin-react": "^5.0.2",
     "vite": "^7.1.3"
   },
   "dependencies": {
     "@arco-design/web-react": "^2.66.5",
+    "@reduxjs/toolkit": "^2.9.0",
+    "less": "^4.4.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.8.2"
   }
 }
