--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@arco-design/web-react": "^2.66.5",
     "@reduxjs/toolkit": "^2.9.0",
+    "@types/node": "^24.3.0",
     "less": "^4.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
