--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
   "devDependencies": {
     "@types/react": "^19.1.12",
     "@vitejs/plugin-react": "^5.0.2",
+    "babel-plugin-import": "^1.13.8",
+    "unplugin-auto-import": "^20.3.0",
     "vite": "^7.1.3"
   },
   "dependencies": {
     "@arco-design/web-react": "^2.66.5",
+    "@arco-plugins/vite-react": "^1.3.3",
     "@reduxjs/toolkit": "^2.9.0",
+    "@types/lodash": "^4.17.21",
     "@types/node": "^24.3.0",
+    "axios": "^1.13.2",
     "less": "^4.4.1",
     "lodash": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "rollup-plugin-visualizer": "^6.0.5"
   }
 }
