--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.2",
     "babel-plugin-import": "^1.13.8",
     "unplugin-auto-import": "^20.3.0",
