--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.2",
+    "autoprefixer": "^10.4.23",
     "babel-plugin-import": "^1.13.8",
+    "postcss": "^8.5.6",
+    "postcss-pxtorem": "^6.1.0",
     "unplugin-auto-import": "^20.3.0",
     "vite": "^7.1.3"
   },
