refactor(login): 删除登录页面及相关组件，重构登录逻辑
- 移除 LoginPage、Forms、Banner 组件及其样式
- 更新登录 API 相关接口
- 调整路由配置以反映组件删除
- 优化全局样式设置，确保响应式设计

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
   },
   "include": [
     "src",
-    "main.tsx",
+    "src/vite-env.d.ts",
+    "src/main.tsx",
     "App.tsx",
     "common/**/*",
     "Pages/**/*",
